# python-igitur

./: README.md  pyproject.toml  requirements-dev.txt  setup.cfg
examples/: download_event_images.py  upload_images.py
igitur/: __init__.py  cli.py  core.py  drive.py  gaudeam.py  members.py  session.py
src/igitur/: __init__.py  calendar.py  cli.py  gaudeam.py
