[project]
name = "igitur"
version = "0.1.0"
description = "A test CLI"
authors = [{name = "Peteh"}]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "Pillow",
    "argcomplete"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
igitur = "igitur.cli:main"