[metadata]
name = igitur
version = 0.1.0
description = A test CLI
author = Peteh
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    igitur = igitur.cli:main